Tratando de hacer mensajes polimorficos con SKLEARN

--- a/Reconocedor de genero/Reconocedor_de_genero.ipynb
+++ b/Reconocedor de genero/Reconocedor_de_genero.ipynb
@@ -106,6 +106,7 @@
     "from sklearn.decomposition import PCA\n",
     "from sklearn.linear_model import SGDClassifier\n",
     "from sklearn.utils import shuffle\n",
+    "from sklearn.base import BaseEstimator, ClassifierMixin\n",
     "\n",
     "from plotly.graph_objs import Scatter, Layout, Bar, Figure\n",
     "\n",
@@ -599,30 +600,17 @@
    },
    "outputs": [],
    "source": [
-    "class ConvolutionalNeuralNetwork(object):\n",
-    "    def __init__(self, training_set, validation_set, test_set, training_labels,\n",
-    "                 validation_labels, test_labels, training_set_len, num_labels,\n",
-    "                 num_channels, image_size, batch_size, patch_size):\n",
-    "\n",
-    "        self.training_set = training_set\n",
-    "        self.validation_set = validation_set\n",
-    "        self.test_set = test_set\n",
-    "        self.training_labels = training_labels\n",
-    "        self.validation_labels = validation_labels\n",
-    "        self.test_labels = test_labels\n",
-    "        self.training_set_len = training_set_len\n",
-    "        self.num_labels = num_labels\n",
+    "class MeanClassifier(BaseEstimator, ClassifierMixin):  \n",
+    "    def __init__(self, num_channels, image_size, batch_size, patch_size, epochs):\n",
+    "        # PARAMETROS\n",
     "        self.num_channels = num_channels\n",
     "        self.image_size = image_size\n",
     "        self.batch_size = batch_size\n",
     "        self.patch_size = patch_size\n",
+    "        self.epochs = epochs\n",
     "\n",
-    "    def _accuracy(self, predictions, labels):\n",
-    "        result = (100.0 * np.sum(np.argmax(predictions, 1) == np.argmax(labels, 1)) / predictions.shape[0])\n",
-    "        return result\n",
-    "\n",
-    "    def train(self):\n",
-    "        # Define the network graph\n",
+    "        # PROPIEDADES DE LA RED\n",
+    "        # INICIALIZO EL GRAFO\n",
     "        graph = tf.Graph()\n",
     "        with graph.as_default():\n",
     "            # Input data\n",
@@ -633,46 +621,49 @@
     "\n",
     "            # Convolution variables\n",
     "            # [filter_width, in_channels, out_channels]\n",
-    "            layer1_weights = tf.Variable(tf.truncated_normal(\n",
-    "                [self.patch_size, self.num_channels, 16], stddev=0.1))\n",
+    "\n",
+    "\n",
+    "            layer1_weights = tf.get_variable(\"layer1_weights\", shape=[self.patch_size, self.num_channels, 16],\n",
+    "                initializer=tf.contrib.layers.xavier_initializer())\n",
     "            layer1_biases = tf.Variable(tf.zeros([16]))\n",
-    "            layer2_weights = tf.Variable(tf.truncated_normal(\n",
-    "                [self.patch_size, 16, 32], stddev=0.1))\n",
+    "            layer2_weights = tf.get_variable(\"layer2_weights\", shape=[self.patch_size, 16, 32],\n",
+    "                initializer=tf.contrib.layers.xavier_initializer())\n",
     "            layer2_biases = tf.Variable(tf.zeros([32]))\n",
-    "            layer3_weights = tf.Variable(tf.truncated_normal(\n",
-    "                [self.patch_size, 32, 64], stddev=0.1))\n",
+    "            layer3_weights = tf.get_variable(\"layer3_weights\", shape=[self.patch_size, 32, 64],\n",
+    "                initializer=tf.contrib.layers.xavier_initializer())\n",
     "            layer3_biases = tf.Variable(tf.zeros([64]))\n",
-    "            layer4_weights = tf.Variable(tf.truncated_normal(\n",
-    "                [self.patch_size, 64, 128], stddev=0.1))\n",
+    "            layer4_weights = tf.get_variable(\"layer4_weights\", shape=[self.patch_size, 64, 128],\n",
+    "                initializer=tf.contrib.layers.xavier_initializer())\n",
     "            layer4_biases = tf.Variable(tf.constant(1.0, shape=[128]))\n",
-    "            layer5_weights = tf.Variable(tf.truncated_normal(\n",
-    "                [self.patch_size, 128, 256], stddev=0.1))\n",
+    "\n",
+    "            layer5_weights = tf.get_variable(\"layer5_weights\", shape=[self.patch_size, 128, 256],\n",
+    "                initializer=tf.contrib.layers.xavier_initializer())\n",
     "            layer5_biases = tf.Variable(tf.zeros([256]))\n",
-    "            layer6_weights = tf.Variable(tf.truncated_normal(\n",
-    "                [self.patch_size, 256, 512], stddev=0.1))\n",
+    "            layer6_weights = tf.get_variable(\"layer6_weights\", shape=[self.patch_size, 256, 512],\n",
+    "                initializer=tf.contrib.layers.xavier_initializer())\n",
     "            layer6_biases = tf.Variable(tf.zeros([512]))\n",
-    "            layer7_weights = tf.Variable(tf.truncated_normal(\n",
-    "                [self.patch_size, 512, 1024], stddev=0.1))\n",
+    "            layer7_weights = tf.get_variable(\"layer7_weights\", shape=[self.patch_size, 512, 1024],\n",
+    "                initializer=tf.contrib.layers.xavier_initializer())\n",
     "            layer7_biases = tf.Variable(tf.zeros([1024]))\n",
-    "            layer8_weights = tf.Variable(tf.truncated_normal(\n",
-    "                [self.patch_size, 1024, 2048], stddev=0.1))\n",
+    "            layer8_weights = tf.get_variable(\"layer8_weights\", shape=[self.patch_size, 1024, 2048],\n",
+    "                initializer=tf.contrib.layers.xavier_initializer())\n",
     "            layer8_biases = tf.Variable(tf.constant(1.0, shape=[2048]))\n",
-    "            layer9_weights = tf.Variable(tf.truncated_normal(\n",
-    "                [self.patch_size, 2048, 4096], stddev=0.1))\n",
-    "            layer9_biases = tf.Variable(tf.zeros([4096]))\n",
-    "            layer10_weights = tf.Variable(tf.truncated_normal(\n",
-    "                [self.patch_size, 4096, 8192], stddev=0.1))\n",
-    "            layer10_biases = tf.Variable(tf.zeros([8192]))\n",
+    "#            layer9_weights = tf.Variable(tf.truncated_normal(\n",
+    "#                [self.patch_size, 2048, 4096], stddev=0.1))\n",
+    "#            layer9_biases = tf.Variable(tf.zeros([4096]))\n",
+    "#            layer10_weights = tf.Variable(tf.truncated_normal(\n",
+    "#                [self.patch_size, 4096, 8192], stddev=0.1))\n",
+    "#            layer10_biases = tf.Variable(tf.zeros([8192]))\n",
     "\n",
     "            # DNN variables\n",
-    "            layer14_weights = tf.Variable(tf.truncated_normal(\n",
-    "                [32 * 8192, 2048], stddev=0.1))\n",
-    "            layer14_biases = tf.Variable(tf.constant(1.0, shape=[2048]))\n",
-    "            layer15_weights = tf.Variable(tf.truncated_normal(\n",
-    "                [2048, 2048], stddev=0.1))\n",
-    "            layer15_biases = tf.Variable(tf.constant(1.0, shape=[2048]))\n",
-    "            layer16_weights = tf.Variable(tf.truncated_normal(\n",
-    "                [2048, self.num_labels], stddev=0.1))\n",
+    "            layer14_weights = tf.get_variable(\"layer14_weights\", shape=[512 * 2048, 200],\n",
+    "                initializer=tf.contrib.layers.xavier_initializer())\n",
+    "            layer14_biases = tf.Variable(tf.constant(1.0, shape=[200]))\n",
+    "            layer15_weights = tf.get_variable(\"layer15_weights\", shape=[200, 200],\n",
+    "                initializer=tf.contrib.layers.xavier_initializer())\n",
+    "            layer15_biases = tf.Variable(tf.constant(1.0, shape=[200]))\n",
+    "            layer16_weights = tf.get_variable(\"layer16_weights\", shape=[200, self.num_labels],\n",
+    "                initializer=tf.contrib.layers.xavier_initializer())\n",
     "            layer16_biases = tf.Variable(tf.constant(1.0, shape=[self.num_labels]))\n",
     "\n",
     "            def model(data):\n",
@@ -693,10 +684,10 @@
     "                hidden = tf.nn.relu(conv + layer7_biases)\n",
     "                conv = tf.nn.conv1d(hidden, layer8_weights, 2, padding='SAME')\n",
     "                hidden = tf.nn.relu(conv + layer8_biases)\n",
-    "                conv = tf.nn.conv1d(hidden, layer9_weights, 2, padding='SAME')\n",
-    "                hidden = tf.nn.relu(conv + layer9_biases)\n",
-    "                conv = tf.nn.conv1d(hidden, layer10_weights, 2, padding='SAME')\n",
-    "                hidden = tf.nn.relu(conv + layer10_biases)\n",
+    "#                conv = tf.nn.conv1d(hidden, layer9_weights, 2, padding='SAME')\n",
+    "#                hidden = tf.nn.relu(conv + layer9_biases)\n",
+    "#                conv = tf.nn.conv1d(hidden, layer10_weights, 2, padding='SAME')\n",
+    "#                hidden = tf.nn.relu(conv + layer10_biases)\n",
     "\n",
     "                # DNN\n",
     "                shape = hidden.get_shape().as_list()\n",
@@ -713,23 +704,22 @@
     "            # Learning rate\n",
     "            #global_step = tf.Variable(0, trainable=False)\n",
     "            #starting_learning_rate = 0.01\n",
-    "            #learning_rate = tf.train.exponential_decay(starting_learning_rate, \n",
+    "            #learning_rate = tf.train.exponential_decay(starting_learning_rate,\n",
     "            #                                           global_step, 10, 0.96, staircase=True)\n",
     "\n",
     "            # Optimizer.\n",
-    "            optimizer = tf.train.GradientDescentOptimizer(0.000001).minimize(loss)\n",
+    "            optimizer = tf.train.GradientDescentOptimizer(1e-4).minimize(loss)\n",
     "\n",
     "            # Predictions for the training, validation, and test data.\n",
     "            train_prediction = tf.nn.softmax(logits)\n",
     "            valid_prediction = tf.nn.softmax(model(tf_valid_dataset))\n",
-    "\n",
-    "        num_steps = 300\n",
-    "\n",
+    "        \n",
+    "    def fit(self, X, y=None):\n",
     "        with tf.Session(graph=graph) as session:\n",
     "            tf.global_variables_initializer().run()\n",
     "            print(\"Initialized\")\n",
-    "            for step in range(num_steps):\n",
-    "                batch_offset = (step * self.batch_size) % (len(self.training_set))\n",
+    "            for step in range(self.epochs):\n",
+    "                batch_offset = (step * self.batch_size) % (len(X))\n",
     "                batch_data = self.training_set[batch_offset:(batch_offset + self.batch_size)]\n",
     "                batch_labels = self.training_labels[batch_offset:(batch_offset + self.batch_size)]\n",
     "                batch_data, batch_labels = shuffle(batch_data, batch_labels, random_state=0)\n",
@@ -737,13 +727,21 @@
     "                feed_dict = {tf_train_dataset: batch_data, tf_train_labels: batch_labels}\n",
     "                _, l, predictions = session.run(\n",
     "                    [optimizer, loss, train_prediction], feed_dict=feed_dict)\n",
-    "                if (step % 50 == 0):\n",
-    "                    print(\"Minibatch loss:\", l)\n",
-    "                    print(\"Minibatch accuracy: {:01.2f} at step {}\".format(\n",
-    "                        self._accuracy(predictions, batch_labels),\n",
-    "                        step))\n",
-    "                    print(\"Validation accuracy: %.1f%%\" % self._accuracy(\n",
-    "                        valid_prediction.eval(), self.validation_labels))"
+    "        return self\n",
+    "\n",
+    "\n",
+    "    \n",
+    "    def predict(self, X, y=None):\n",
+    "        return([self._meaning(x) for x in X])\n",
+    "\n",
+    "    def _accuracy(self, predictions, labels):\n",
+    "        result = (100.0 * np.sum(np.argmax(predictions, 1) == np.argmax(labels, 1)) / predictions.shape[0])\n",
+    "        return result\n",
+    "    \n",
+    "    def score(self, X, y=None):\n",
+    "        predictions = self.predict(X)\n",
+    "        score = self._accuracy(predictions=predictions, labels=y)\n",
+    "        return(score)"
    ]
   },
   {
@@ -788,255 +786,6 @@
     "                                      batch_size=BATCH_SIZE, patch_size=PATCH_SIZE)\n",
     "\n",
     "conv_net.train()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ahora definamos nuestro pipeline para preprocesar la entrada y alimentar nuestro clasificador:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "estimators = [(\"reduce_dim\", PCA()), (\"knn\", KNeighborsClassifier())]\n",
-    "pipeline = Pipeline(estimators)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Vamos a utilizar GridSearch para probar distintas configuraciones de parámetros sobre PCA y Knn."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "N_COMPONENTS = [1, 2, 4, 8, 16, 32, 64, 128]\n",
-    "N_NEIGHBORS = [1, 2, 4, 8, 16]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Creamos nuestro diccionario en el formato que toma GridSearchCV para efectivamente ejecutar las diferentes configuraciones"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "param_grid = [\n",
-    "    {\n",
-    "        'reduce_dim__n_components': N_COMPONENTS,\n",
-    "        'knn__n_neighbors': N_NEIGHBORS,\n",
-    "    },\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Para ver que tan bién generaliza nuestro clasificador vamos a utilizar KFold Cross-Validation, en particular con 10 folds."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "kfold = KFold(n_splits=10, shuffle=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ahora nos falta fittear nuestro algoritmo y calcular los resultados sobre el conjunto de testeo"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "grid_search = GridSearchCV(estimator=pipeline, cv=kfold, param_grid=param_grid)\n",
-    "grid_search.fit(X=image_container, y=one_hot_labels)\n",
-    "results = grid_search.cv_results_['mean_test_score']\n",
-    "legends = grid_search.cv_results_['params']"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Veamos cuales fueron los mejores parámetros encontrados:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "best_params = grid_search.best_params_\n",
-    "best_n_neighbors = best_params['knn__n_neighbors']\n",
-    "best_n_components = best_params['reduce_dim__n_components']\n",
-    "\n",
-    "print(\"La mejor mejor configuración de parámetros es: \\n\" + \"Cantidad de vecinos:\" + str(best_n_neighbors) + '\\n' +\n",
-    "      \"Cantidad de componentes principales: \" + str(best_n_components))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Una vez realizado esto, creamos los gráficos. Para esto creamos dos métodos, uno para la configuración del gráfico (es decir, necesitamos parsear los resultados obtenidos por PCA y KNN de manera que PlotLy los entienda y pueda graficar) y finalmente un método que nos permita graficar usando PlotLy."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def graph_config(legends, results):\n",
-    "    old_n_neighbors = legends[0]['knn__n_neighbors']\n",
-    "    set_of_lists_with_results = []\n",
-    "    list_with_results = []\n",
-    "    graph_names = []\n",
-    "    for index, legend in enumerate(legends):\n",
-    "        new_n_neighbors = legend['knn__n_neighbors']\n",
-    "\n",
-    "        if new_n_neighbors == old_n_neighbors:\n",
-    "            list_with_results.append(results[index])\n",
-    "        else:\n",
-    "            graph_names.append(old_n_neighbors)\n",
-    "            set_of_lists_with_results.append(list_with_results)\n",
-    "            list_with_results = [results[index]]\n",
-    "            old_n_neighbors = new_n_neighbors\n",
-    "    graph_names.append(new_n_neighbors)\n",
-    "    set_of_lists_with_results.append(list_with_results)\n",
-    "    return graph_names, set_of_lists_with_results\n",
-    "\n",
-    "def graph(N_COMPONENTS, graph_names, set_of_lists_with_results):\n",
-    "    traces = []\n",
-    "    for index, set in enumerate(set_of_lists_with_results):\n",
-    "        x = N_COMPONENTS\n",
-    "        y = set\n",
-    "        name = \"cantidad de vecinos = \" + str(graph_names[index])\n",
-    "        traces.append(Scatter(x=x, y=y, name=name))\n",
-    "    layout = Layout(\n",
-    "        xaxis=dict(\n",
-    "            title='Cantidad de componentes principales',\n",
-    "            type='log',\n",
-    "            autorange=True\n",
-    "        ),\n",
-    "        yaxis=dict(\n",
-    "            title='% Accuracy',\n",
-    "            type='log',\n",
-    "            autorange=True\n",
-    "        ),\n",
-    "        title=\"Medida de performance - Accuracy\"\n",
-    "    )\n",
-    "    figure = Figure(data=traces, layout=layout)\n",
-    "    plotly.offline.iplot(figure)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Una vez hecho esto, pasemos a graficar:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "graph_names, set_of_lists_with_results = graph_config(legends, results)\n",
-    "graph(N_COMPONENTS, graph_names, set_of_lists_with_results)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ahora veamos algunas métricas más interesantes. Para esto vamos a partir el set de datos en entrenamiento y testeo. Luego vamos a utilizar los mejores parámetros encontrados y analizar bajo estos las métricas Precision, Recall y F1-Score."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(image_container, one_hot_labels, test_size=0.3, random_state=0)\n",
-    "\n",
-    "pipeline.set_params(reduce_dim__n_components=best_n_components, knn__n_neighbors=best_n_neighbors)\n",
-    "pipeline.fit(X_train, y_train)\n",
-    "y_true, y_pred = y_test, pipeline.predict(X_test)\n",
-    "print(classification_report(y_true, y_pred))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Como último, veamos efectivamente las eigenfaces:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "cantidad_de_componentes = 10\n",
-    "pca = PCA(n_components=cantidad_de_componentes)\n",
-    "pca.fit(image_container)\n",
-    "eigenfaces = pca.components_.reshape((cantidad_de_componentes, ALTO_DE_IMAGEN, ANCHO_DE_IMAGEN))\n",
-    "eigenface_titles = [\"Eigenface %d\" % (i + 1) for i in range(eigenfaces.shape[0])]\n",
-    "plot_gallery(images=eigenfaces, titles=eigenface_titles,\n",
-    "                h=ALTO_DE_IMAGEN, w=ANCHO_DE_IMAGEN, n_row=1, n_col=cantidad_de_componentes)\n",
-    "pyplot.show()"
    ]
   }
  ],
